Made changes to the files

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
     <div class="all">
         <header class="navbar">
-			<a href="">Fractal</a>
-				<input type="search" id="fsearch" name="fsearch">
-				<a href="">Guide</a>
-				<a href="">API</a>
-				<a href="">Chat</a>
-				<a href="">Github</a>
+			<a href="" id="direction">Fractal</a>
+			<a href="">Guide</a>
+			<a href="">API</a>
+			<a href="">Chat</a>
+			<a href="">Github</a>
+			<div class="search-container">
+				<input type="search" name="search">
+			</div>
         </header>
-    <div>
         <div class="home">
             <header class="head">
                 <img src="images/fractal.png" alt="">
@@ -51,11 +52,11 @@
 					</p>
 				</div>
 			</div>
-	</div>
+		</div>
 		<div>
 			<h2 class="link-title">Fractal in the Wild</h2>
 			<hr>
-			<div class="clearfix">  
+			<div class="clearfix">
 				<div class="features">
 					<div class="feature feature-link">
 						<a href="">City of Boston</a><br>
@@ -74,6 +75,26 @@
 					</div>
 				</div>
 			</div>
+			<!--
+				<div class="clearfix">  
+				<div class="features">
+					<div class="feature feature-link">
+						<a href="">City of Boston</a><br>
+						<a href="">Clearleft</a><br>
+						<a href="">Kanbasu</a>
+					</div>
+					<div class="feature feature-link">
+						<a href="">City of Ghent</a><br>
+						<a href="">Perch</a><br>
+						<a href="">liip</a>
+					</div>
+					<div class="feature feature-link">
+						<a href="">24ways.org</a><br>
+						<a href="">US  Web Design System</a><br>
+						<a href="">Eurostar</a>
+					</div>
+				</div> -->
+			
 			
         </div>
         <div class="supporters">
@@ -81,10 +102,10 @@
 			<p>
 				supported by
 			</p>
-            <a href="" class="supporter"><img src="Images/slab.png" alt="slab"></a>
-            <a href="" class="supporter"><img src="Images/clearleft.png" alt="clearleft"></a>
-            <a href="" class="supporter"><img src="Images/kind.png" alt="kind"></a>
-            <a href="" class="supporter"><img src="Images/liip.png" alt="liip"></a>
+            <a href="" class="supporter" style="min-width: 70px;"><img src="Images/slab.png" alt="slab"></a>
+            <a href="" class="supporter" style="min-width: 90px;"><img src="Images/clearleft.png" alt="clearleft"></a>
+            <a href="" class="supporter" style="min-width: 65px;"><img src="Images/kind.png" alt="kind"></a>
+            <a href="" class="supporter" style="min-width: 70px;"><img src="Images/liip.png" alt="liip"></a>
             <p>
                 and all our community maintainers
             </p>
